--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Эффективная работа с git</title>
+  <title>Работа с git: просто и эффективно</title>
   <meta charset="ut-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,13 +11,13 @@
 <body class="shower list">
 
 <header class="caption">
-  <h1>Эффективная работа с git</h1>
+  <h1>Работа с git: просто и эффективно</h1>
   <p>Настройки, команды, workflow</p>
 </header>
 
 <!-- Заглавная страница (begin) -->
 <section class="slide">
-  <h2 class="shout">Эффективная работа с git</h2>
+  <h2 class="shout">Работа с git: просто и эффективно</h2>
 </section>
 <!-- Заглавная страница (end) -->
 
