Make title more accurate

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body class="shower list">
 
 <header class="caption">
-  <h1>Работа с git: просто и эффективно</h1>
-  <p>Настройки, команды, workflow</p>
+  <h1>Работа с git. От внутреннего устройства до повседневной работы.</h1>
+  <p>Внутреннее устройство, настройки, команды, workflow</p>
 </header>
 
 <!-- Заглавная страница (begin) -->
-<section class="slide">
-  <h2 class="shout">Работа с git: просто и эффективно</h2>
+<section class="slide" style="text-align:center;">
+  <h2 style="font-size: 6em;">Работа с git</h2>
+  <p style="font-size: 2em; line-height: 1.3em; margin: 2em 0 0 0;">От внутреннего устройства до повседневной работы.</p>
 </section>
 <!-- Заглавная страница (end) -->
 
@@ -25,15 +26,23 @@
 <section class="slide">
   <h2>Оглавление</h2>
   <ul>
-    <li>Настройка</li>
     <li>Устройство</li>
+    <li>Настройка</li>
     <li>Коммит</li>
-    <li>Основные команды</li>
-    <li>Pull request</li>
+    <li>Пулреквест</li>
+    <li>Управление историей</li>
     <li>Дополнительные инструменты</li>
   </ul>
 </section>
 <!-- TOC (end) -->
+
+<!-- Устройство (begin) -->
+<section class="slide">
+  <h2>Устройство</h2>
+
+  <p></p>
+</section>
+<!-- Устройство (end) -->
 
 <!-- Contacts (begin) -->
 <section class="slide">
