Add: git file types: blob and tree

--- a/index.html
+++ b/index.html
@@ -80,11 +80,28 @@
 <!-- Этот проект (end) -->
 
 <!-- Маппинг файлов проекта на файлы в git (begin) -->
-<!-- TODO: сделать свою картинку -->
 <section class="slide">
+  <h2>Маппинг файлов проекта на файлы в git</h2>
+  <!-- TODO: сделать свою картинку -->
   <img src="pictures/project-files-map-to-git-files.png" alt="" class="cover">
 </section>
 <!-- Маппинг файлов проекта на файлы в git (end) -->
+
+<!-- Blob (begin) -->
+<section class="slide">
+  <h2>Blob файл</h2>
+  <!--TODO: сделать свою картинку-->
+  <img src="pictures/blob-file.png" alt="" class="cover">
+</section>
+<!-- Blob (end) -->
+
+<!-- Tree (begin) -->
+<section class="slide">
+  <h2>Tree файл</h2>
+  <!-- TODO: сделать свою картинку -->
+  <img src="pictures/tree-file.png" alt="" class="cover">
+</section>
+<!-- Tree (end) -->
 
 <!-- Contacts (begin) -->
 <section class="slide">
