Add: git history example

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 <!-- Commit (begin) -->
 <section class="slide">
   <h2>Commit файл</h2>
+  <!-- TODO: сделать свою картинку -->
   <img src="pictures/commit-file.png" alt="" class="cover">
 </section>
 <!-- Commit (end) -->
@@ -125,7 +126,6 @@
 
 <!-- Пример содержимого коммита (begin) -->
 <section class="slide">
-
   <h2>Пример содержимого коммита</h2>
   <code>git cat-file -p d56c82c</code>
   <br>
@@ -139,6 +139,14 @@
   </pre>
 </section>
 <!-- Пример содержимого коммита (end) -->
+
+<!-- Пример истории (begin) -->
+<section class="slide">
+  <h2>Пример истории коммитов и файлов</h2>
+  <!-- TODO: сделать свою картинку -->
+  <img src="pictures/git-history-file-structure.png" alt="" class="cover">
+</section>
+<!-- Пример истории (end) -->
 
 <!-- Contacts (begin) -->
 <section class="slide">
