Добавить слайды про материалы

--- a/workshop.html
+++ b/workshop.html
@@ -285,20 +285,59 @@
 
 <!-- Git stash (begin) -->
 <section class="slide">
-  <h2>Git stash</h2>
+  <h2 style="margin: -50px 0 30px 0;">Git stash</h2>
+  <p style="font-size: 2em; margin: 10px 0 30px 0;"><code>git stash</code></p>
+  <p>спрятать</p>
 
-  <p>Когда нужно обновиться по master без коммита</p>
+  <p style="font-size: 2em; margin: 50px 0 30px 0;"><code>git stash pop</code></p>
+  <p>применить</p>
 </section>
 <!-- Git stash (end) -->
 
+<!-- А теперь горбатый (begin) -->
+<section class="slide">
+  <img src="pictures/a-teper-gorbatyi.jpg" alt="" class="cover">
+</section>
+<!-- А теперь горбатый (end) -->
 
 
+<!-- Демо (begin) -->
+<section class="slide">
+  <img src="pictures/git-online-training.png" alt="" class="cover">
+</section>
+<!-- Демо (end) -->
 
 
+<!-- LearnGitBranching (begin) -->
+<section class="slide">
+  <h2>Learn Git Online</h2>
+
+  <ul>
+    <li>Демо: <a href="https://learngitbranching.js.org/?demo">https://learngitbranching.js.org/?demo</a></li>
+    <li>Тенировка: <a href="https://learngitbranching.js.org/">https://learngitbranching.js.org/</a></li>
+    <li><a href="https://try.github.io/">Got 15 minutes and want to learn Git?</a></li>
+  </ul>
+</section>
+<!-- LearnGitBranching (end) -->
 
 
+<!-- Материалы (begin) -->
+<section class="slide">
+  <h2>Материалы</h2>
+
+  <ul>
+    <li><a href="https://git-scm.com/book/ru/v2">Git Book, на русском</a></li>
+    <li><a href="http://devdocs.io/git/">Git документация</a></li>
+  </ul>
+</section>
+<!-- Материалы (end) -->
 
 
+<!-- Вопросы?! (begin) -->
+<section class="slide">
+  <h2 class="shout">Вопросы?!</h2>
+</section>
+<!-- Вопросы?! (end) -->
 
 
 <!-- Contacts (begin) -->
