--- a/workshop.html
+++ b/workshop.html
@@ -221,8 +221,10 @@
 
   <h2>Ребейз</h2>
 
-  <p><code>git fetch origin</code> — Забрать последние изменения из репозитория</p>
-  <p><code>git rebase origin/master</code> — Обновить свою ветку</p>
+  <p style="font-size: 2em; margin: 10px 0 30px 0;"><code>git fetch origin</code></p>
+  <p>— Забрать последние изменения из репозитория</p>
+  <p style="font-size: 2em; margin: 10px 0 30px 0;"><code>git rebase origin/master</code></p>
+  <p>— Обновить свою ветку</p>
 </section>
 <!-- Ребейз (end) -->
 
