--- a/workshop.html
+++ b/workshop.html
@@ -296,6 +296,18 @@
 </section>
 <!-- Git stash (end) -->
 
+<!-- github (begin) -->
+<section class="slide">
+  <h2 class="shout">github</h2>
+</section>
+<!-- github (end) -->
+
+<!-- github link (begin) -->
+<section class="slide">
+  <h2 class="shout"><a href="https://github.com/explore">github/explore</a></h2>
+</section>
+<!-- github link (end) -->
+
 <!-- А теперь горбатый (begin) -->
 <section class="slide">
   <img src="pictures/a-teper-gorbatyi.jpg" alt="" class="cover">
@@ -330,6 +342,7 @@
   <ul>
     <li><a href="https://git-scm.com/book/ru/v2">Git Book, на русском</a></li>
     <li><a href="http://devdocs.io/git/">Git документация</a></li>
+    <li><a href="https://services.github.com">Github документация</a></li>
   </ul>
 </section>
 <!-- Материалы (end) -->
