Поправить ссылку на github

--- a/workshop.html
+++ b/workshop.html
@@ -374,7 +374,7 @@
 <!-- Contacts (end) -->
 
 <footer class="badge">
-  <a href="https://github.com/shower/shower">Fork me on GitHub</a>
+  <a href="https://github.com/easy-deep-learning/git-effective-workflow">Fork me on GitHub</a>
 </footer>
 
 <div class="progress"></div>
