--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <!-- Contacts (end) -->
 
 <footer class="badge">
-  <a href="https://github.com/shower/shower">Fork me on GitHub</a>
+  <a href="https://github.com/easy-deep-learning/git-effective-workflow">Fork me on GitHub</a>
 </footer>
 
 <div class="progress"></div>
