Добавить пример кнопки Сохранить

--- a/workshop.html
+++ b/workshop.html
@@ -57,11 +57,24 @@
 </section>
 <!-- git — не кнопка Сохранить (end) -->
 
+<!-- git — не кнопка Сохранить 2 (begin) -->
+<section class="slide">
+  <h2>git — не кнопка &laquo;Сохранить&raquo;</h2>
+  <br><br>
+  <pre>
+			<code>Fix</code>
+			<code>Fix 2</code>
+			<code>Another fix</code>
+			<code>Fixed</code>
+		</pre>
+</section>
+<!-- git — не кнопка Сохранить 2 (end) -->
+
 
 <!-- Почему не кнопка Сохранить? (begin) -->
 <section class="slide">
 
-  <h2>Почему не кнопка Сохранить?</h2>
+  <h2 style="margin: -30px 0 20px 0;">Почему не кнопка &laquo;Сохранить&raquo;?</h2>
 
   <p>1. Потому что есть <code>git diff %commit-hash%</code></p>
   <p>2. Потому что есть github:
